# kolokwium

kol_1/: kol_1.txt
kolokwium/kolokwium-master/kol_1/zad1/: makefile
kolokwium/kolokwium-master/kol_1/zad3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pwd.txt
