cmake_minimum_required(VERSION 3.10)
project(myProject)
set(EXECUTABLE_OUTPUT_PATH "/home/melvin/srodowiska/kolokwium/kolokwium/kolokwium-master/kol_1/zad3/bin")
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "/home/melvin/srodowiska/kolokwium/kolokwium/kolokwium-master/kol_1/zad3/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "/home/melvin/srodowiska/kolokwium/kolokwium/kolokwium-master/kol_1/zad3/lib")
include_directories("./include/")
ADD_LIBRARY( Student STATIC "src/Student.cpp")
link_directories(/home/melvin/srodowiska/kolokwium/kolokwium/kolokwium-master/kol_1/zad3/lib)
LINK_DIRECTORIES(/usr/local/lib)
add_executable(main_exe src/libtest.cpp)
target_link_libraries(main_exe Student)
